objects/Opportunity_Score__c.object
<CustomObject>
    <description>This object will be use for Opportunity Score result.</description>
    <fields>
        <fullName>Category_Score_Formulea__c</fullName>
        <formula>Category_Value_Score__r.Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Value_Formulea__c</fullName>
        <formula>Category_Value_Score__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Value_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will related with Opty score result.</description>
        <label>Category Value Score</label>
        <referenceTo>Category_Value_Score__c</referenceTo>
        <relationshipLabel>Opportunity Scores</relationshipLabel>
        <relationshipName>Opportunity_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This will use for Category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Number__c</fullName>
        <label>Input Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Category__c</fullName>
        <description>This will store Main Category</description>
        <label>Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <description>Maximum score of selected category value</description>
        <label>Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>This field is use for oppty score</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Scores</relationshipLabel>
        <relationshipName>Opportunity_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>This will use for Sub-Category.</description>
        <label>Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Score__c</fullName>
        <description>Total Opportunity Score</description>
        <label>Total Opportunity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Score</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>